--- a/scss/_cards.scss
+++ b/scss/_cards.scss
@@ -114,8 +114,8 @@
             }
             @media only screen and (max-width: 595px) {
                 font-size: 12px;
-                white-space: break-spaces;
-                text-align: left;
+                // white-space: break-spaces;
+                // text-align: left;
             }
         }
     }
